--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/capitalize.html">Latest Website</a>
+                      <a href="/public/konami.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -172,6 +172,7 @@
                                            <a href="public/wheelofhistory.html" target="_blank">Day Seventy Nine - Wheel Of History<br></a>
                                            <a href="public/favoritecolor.html" target="_blank">Day Eighty - Favorite Color<br></a>
                                            <a href="public/capitalize.html" target="_blank">Day Eighty One - Capitalize Text<br></a>
+                                           <a href="public/konami.html" target="_blank">Day Eighty Two - Konami Code<br></a>
 								</div>
               </div>
             </div>
@@ -181,7 +182,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>81</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>82</em> are done</span></h1>
               </div>
             </div>
           </div>
