--- a/index.html
+++ b/index.html
@@ -266,5 +266,7 @@
         <script src="js/scripts.js"></script>
         <script src="js/jquery.flexslider.js"></script>
         <script src="js/modernizr.js"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5519f028102b8231" async="async"></script>
+
       </body>
     </html>
