--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                                            <a href="public/favoritecolor.html" target="_blank">Day Eighty - Favorite Color<br></a>
                                            <a href="public/capitalize.html" target="_blank">Day Eighty One - Capitalize Text<br></a>
                                            <a href="public/konami.html" target="_blank">Day Eighty Two - Konami Code<br></a>
+                                           <a href="public/checkboxwave.html" target="_blank">Day Eighty Three - Checkbox Wave<br></a>
 								</div>
               </div>
             </div>
