--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               </div>
             </div>
           </nav>
+          <main>
           <section class="hero" id="hero">
             <div class="container">
               <div class="row">
@@ -247,7 +248,7 @@
             </div>
           </div>
         </section>
--->
+--></main>
         <footer>
           <div class="container">
             <div class="row">
