--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </head>
       <body id="top">
         <header id="home">
-          <nav>
+          <!--<nav>
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
@@ -49,8 +49,17 @@
                   </nav>
                 </div>
               </div>
+              
             </div>
-          </nav>
+          </nav>-->
+          	<nav>
+		<ul class="cd-primary-nav">
+			<li><a href="#intro">About</a></li>
+			<li><a href="#features">Sites</a></li>
+			<li><a href="https://180projectblog.wordpress.com/">Blog</a></li>
+		</ul>
+	</nav>
+
           <main>
           <section class="hero" id="hero">
             <div class="container">
