--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="http://www.marcoguglie.it/Codepen/RoundedAnimatedNav/js/velocity.min.js"></script>
         <script src="js/waypoints.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/scripts.js"></script>
