--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</ul>
 	</nav>
 
-          <main class="cd-content">
+          <main>
           <section class="hero" id="hero">
             <div class="container">
               <div class="row">
