--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			<li><a href="#intro">About</a></li>
 			<li><a href="#features">Sites</a></li>
 			<li><a href="https://180projectblog.wordpress.com/">Blog</a></li>
+			<p>Click the X after you have selected a place to go</p>
 		</ul>
 	</nav>
 
