--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<li><a href="#intro">About</a></li>
 			<li><a href="#features">Sites</a></li>
 			<li><a href="https://180projectblog.wordpress.com/">Blog</a></li>
-			<p vertical-align:middle;>Click the X after you have selected a place to go</p>
+			<p style = 'vertical-align:middle;'>Click the X after you have selected a place to go</p>
 		</ul>
 	</nav>
 
