--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/checkboxwave.html">Latest Website</a>
+                      <a href="/public/fireworks2.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -185,6 +185,7 @@
                                            <a href="public/capitalize.html" target="_blank">Day Eighty One - Capitalize Text<br></a>
                                            <a href="public/konami.html" target="_blank">Day Eighty Two - Konami Code<br></a>
                                            <a href="public/checkboxwave.html" target="_blank">Day Eighty Three - Checkbox Wave<br></a>
+                                            <a href="public/fireworks2.html" target="_blank">Day Eighty Four - Fireworks 2.0<br></a>
 								</div>
               </div>
             </div>
