--- a/index.html
+++ b/index.html
@@ -367,5 +367,22 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
         <script src="js/modernizr.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5519f028102b8231" async="async"></script>
 
+                <script type="text/javascript">//<![CDATA[ 
+(function() {
+    var configuration = {
+    "token": "b51c090a90c8b103f4ed770a6db86643",
+    "exitScript": {
+        "enabled": true
+    }
+};
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = '//cdn.shorte.st/link-converter.min.js';
+    script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
+    var entry = document.getElementsByTagName('script')[0];
+    entry.parentNode.insertBefore(script, entry);
+})();
+//]]></script>                
+        
       </body>
     </html>
