--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/fireworks2.html">Latest Website</a>
+                      <a href="/public/particleexplosion.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -262,6 +262,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
                                            <a href="public/konami.html" target="_blank">Day Eighty Two - Konami Code<br></a>
                                            <a href="public/checkboxwave.html" target="_blank">Day Eighty Three - Checkbox Wave<br></a>
                                             <a href="public/fireworks2.html" target="_blank">Day Eighty Four - Fireworks 2.0<br></a>
+                                            <a href="public/particleexplosion.html" target="_blank">Day Eighty Five - Particle Explosion<br></a>
 								</div>
               </div>
             </div>
@@ -271,7 +272,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>83</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>85</em> are done</span></h1>
               </div>
             </div>
           </div>
