--- a/public/smokemachine.html
+++ b/public/smokemachine.html
@@ -10,7 +10,7 @@
 		<title>Smoke Machine</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
-		<script src="/js/analytics.js"></script>
+		<script src="/public/js/analytics.js"></script>
 		<link rel="stylesheet" type="text/css" href="/public/css/smokemachine.css" />
 	</head>
 	<body>
