--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
                                            <a href="public/checkboxwave.html" target="_blank">Day Eighty Three - Checkbox Wave<br></a>
                                             <a href="public/fireworks2.html" target="_blank">Day Eighty Four - Fireworks 2.0<br></a>
                                             <a href="public/particleexplosion.html" target="_blank">Day Eighty Five - Particle Explosion<br></a>
+                                            <a href="public/smokemachine.html" target="_blank">Day Eighty Six - Smoke Machine<br></a>
 								</div>
               </div>
             </div>
