--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
             <div class="row">
               <div class="col-md-6">
                 <ul class="legals">
-                  <li>Copyright&copy; Kabir Shah</li>
-                  <li><span>
+                  <li>Copyright &copy;</li>
+                  <li float:right;><span>
     Made with <i class="fa fa-heart pulse"></i> by <a href="http://about.me/kabirshah" target="_blank">Kabir</a>
 </span></li>
                 </ul>
