--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
               <div class="col-md-6">
                 <ul class="legals">
                   <li>Copyright &copy;</li>
-                  <li float:right;><span>
+                  <li float:right;><span class="loveC">
     Made with <i class="fa fa-heart pulse"></i> by <a href="http://about.me/kabirshah" target="_blank">Kabir</a>
 </span></li>
                 </ul>
