--- a/public/favoritecolor2.html
+++ b/public/favoritecolor2.html
@@ -11,7 +11,7 @@
   <title>Favorite Color 2.0</title>
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
-<link rell="stylesheet" type="text/css" href="/public/css/favoritecolor2.css"/>
+<link rel="stylesheet" type="text/css" href="/public/css/favoritecolor2.css"/>
 </head>
 
 <body>
