--- a/public/favoritecolor2.html
+++ b/public/favoritecolor2.html
@@ -17,7 +17,7 @@
 <body>
   <h1>Say a colour</h1>
   <script src="/public/js/lib/jquery.min.js"></script>
-<script src="/public/js/favoritecolor2.js></script>
+<script src="/public/js/favoritecolor2.js"></script>
 
 </body>
 </html>
