--- a/public/capitalize.html
+++ b/public/capitalize.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Study Guide For Egypt!">
+    <meta name="description" content="Capitalize Text!">
     <meta name="author" content="Kabir Shah">
 
 		<title>Capitalize Text</title>
