--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/favoritecolor2.html">Latest Website</a>
+                      <a href="/public/crystal.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -276,6 +276,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
                                             <a href="public/smokemachine.html" target="_blank">Day Eighty Six - Smoke Machine<br></a>
                                             <a href="public/gradientmaker.html" target="_blank">Day Eighty Seven - Gradient Maker<br></a>
                                             <a href="public/favoritecolor2.html" target="_blank">Day Eighty Eight - Favorite Color 2.0<br></a>
+                                            <a href="public/crystal.html" target="_blank">Day Eighty Nine - Crystal<br></a>
 								</div>
               </div>
             </div>
@@ -285,7 +286,7 @@ _(())\_)()(_))(_)) (_(_()|(_)  __ ((_)((_) _ ((_|_))     ((_)(())\_)()_((_)  )\_
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>88</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>89</em> are done</span></h1>
               </div>
             </div>
           </div>
