--- a/public/crystal.html
+++ b/public/crystal.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 
-		<script src="/public/js/lib/three.min.js"></script>
+		<script src="/public/js/lib/threejs/three.min.js"></script>
 		<script src="/public/js/crystal.js"></script>
 	</body>
 </html>
