--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/spacecrystals.html">Latest Website</a>
+                      <a href="/public/gradientmaker2.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -285,6 +285,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                             <a href="public/favoritecolor2.html" target="_blank">Day Eighty Eight - Favorite Color 2.0<br></a>
                                             <a href="public/crystal.html" target="_blank">Day Eighty Nine - Crystal<br></a>
                                             <a href="public/spacecrystals.html" target="_blank">Day Ninety - Space Crystals<br></a>
+                                            <a href="public/gradientmaker2.html" target="_blank">Day Ninety One - Gradient Maker 2.0<br></a>
 								</div>
               </div>
             </div>
@@ -294,7 +295,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>90</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>91</em> are done</span></h1>
               </div>
             </div>
           </div>
