--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/gradientmaker2.html">Latest Website</a>
+                      <a href="/public/rickroll.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -286,6 +286,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                             <a href="public/crystal.html" target="_blank">Day Eighty Nine - Crystal<br></a>
                                             <a href="public/spacecrystals.html" target="_blank">Day Ninety - Space Crystals<br></a>
                                             <a href="public/gradientmaker2.html" target="_blank">Day Ninety One - Gradient Maker 2.0<br></a>
+                                            <a href="public/rickroll.html" target="_blank">Day Ninety Two - Rickrolled<br></a>
 								</div>
               </div>
             </div>
