--- a/public/clock.html
+++ b/public/clock.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Day Ninety Three | Clock">
     <meta name="author" content="Kabir Shah">
 		<title>Clock</title>
-		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.min..css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.min.css" />
 <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/public/css/clock.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
