--- a/public/illusion.html
+++ b/public/illusion.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kabir Shah">
 		<title>Illusion</title>
 
-		<link rel="stylesheet" type="text/css" href="/public/css/illusion.css.scss" />
+		<link rel="stylesheet" type="text/css" href="/public/css/illusion.css" />
 						<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 				<script src="/public/js/analytics.js"></script>
