--- a/public/illusion.html
+++ b/public/illusion.html
@@ -9,13 +9,14 @@
 		<title>Illusion</title>
 
 		<link rel="stylesheet" type="text/css" href="/public/css/illusion.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.css" />
 						<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 				<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
 <label for='3d'>
-  Give me another dimension
+  Make it 3d!
 </label>
 <input id='3d' type='checkbox'>
 <div class='Wrapper'>
