--- a/public/illusion.html
+++ b/public/illusion.html
@@ -9,16 +9,14 @@
 		<title>Illusion</title>
 
 		<link rel="stylesheet" type="text/css" href="/public/css/illusion.css" />
-		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.min.css" />
 						<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 				<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
-<label for='3d'>
-  Make it 3d!
-</label>
-<input id='3d' type='checkbox'>
+          <input type="checkbox" name="checkbox" id="checkbox:checkbox-1 3d"/>
+    <label for="checkbox:checkbox-1" class="checkbox-label">Make it 3D</label>
 <div class='Wrapper'>
   <div class='Ring'></div>
   <div class='Ring'></div>
