--- a/public/illusion.html
+++ b/public/illusion.html
@@ -15,8 +15,9 @@
 				<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
+		    <label for="checkbox:checkbox-1 3d" class="checkbox-label">Make it 3D</label>
           <input type="checkbox" name="checkbox" id="checkbox:checkbox-1 3d"/>
-    <label for="checkbox:checkbox-1" class="checkbox-label">Make it 3D</label>
+
 <div class='Wrapper'>
   <div class='Ring'></div>
   <div class='Ring'></div>
