--- a/public/illusion.html
+++ b/public/illusion.html
@@ -15,8 +15,8 @@
 				<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
-		    <label for="checkbox:checkbox-1 3d" class="checkbox-label">Make it 3D</label>
-          <input type="checkbox" name="checkbox" id="checkbox:checkbox-1 3d"/>
+		    <label for="3d" class="checkbox-label">Make it 3D</label>
+          <input type="checkbox" name="checkbox" id="3d"/>
 
 <div class='Wrapper'>
   <div class='Ring'></div>
