--- a/public/illusion.html
+++ b/public/illusion.html
@@ -15,8 +15,10 @@
 				<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
-		    <label for="3d">Make it 3D</label>
-          <input type="checkbox" id="3d"/>
+<label for='3d'>
+   Make it 3d!
+ </label>
+ <input id='3d' type='checkbox'>
 
 <div class='Wrapper'>
   <div class='Ring'></div>
