--- a/public/clicklocation.html
+++ b/public/clicklocation.html
@@ -16,6 +16,7 @@
 <i></i>
 
 <span>CLICK ANYWHERE</span>
+<script src="/public/js/lib/jquery.min.js"
 		<script src="/public/js/clicklocation.js"></script>
 	</body>
 </html>
