--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/illusion.html">Latest Website</a>
+                      <a href="/public/clicklocation.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -289,6 +289,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                             <a href="public/rickroll.html" target="_blank">Day Ninety Two - Rickrolled<br></a>
                                             <a href="public/clock.html" target="_blank">Day Ninety Three - Clock<br></a>
                                             <a href="public/illusion.html" target="_blank">Day Ninety Four - Illusion<br></a>
+                                            <a href="public/clicklocation.html" target="_blank">Day Ninety Five - Click Location<br></a>
 								</div>
               </div>
             </div>
