--- a/public/synthesizer2.html
+++ b/public/synthesizer2.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Kabir Shah">
 
 		<title>Synthesizer 2.0</title>
+		<link rel="stylesheet" type="text/css" href="/public/css/lib/reset.css" />
 		<link rel="stylesheet" type="text/css" href="/public/css/synthesizer2.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
