--- a/public/synthesizer2.html
+++ b/public/synthesizer2.html
@@ -42,6 +42,7 @@
   <i data-key='M' data-note='932'>M</i>
   <i class='play'>Play</i>
 </figure>
+<script src="/public/js/lib/jquery.min.js"></script>
 		<script src="/public/js/synthesizer2.js"></script>
 	</body>
 </html>
