--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/clicklocation.html">Latest Website</a>
+                      <a href="/public/synthesizer2.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -290,6 +290,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                             <a href="public/clock.html" target="_blank">Day Ninety Three - Clock<br></a>
                                             <a href="public/illusion.html" target="_blank">Day Ninety Four - Illusion<br></a>
                                             <a href="public/clicklocation.html" target="_blank">Day Ninety Five - Click Location<br></a>
+                                              <a href="public/synthesizer2.html" target="_blank">Day Ninety Six - Synthesizer 2.0<br></a>
 								</div>
               </div>
             </div>
@@ -299,7 +300,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>94</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>96</em> are done</span></h1>
               </div>
             </div>
           </div>
