--- a/index.html
+++ b/index.html
@@ -377,12 +377,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <footer>
           <div class="container">
             <div class="row">
-              <div class="col-md-6">
-                <ul class="legals">
-                  <li float:right;><span class="loveC">
+              <div class="col-md-6">                  <span class="loveC">
     Made with <i class="fa fa-heart pulse"></i> by <a href="http://about.me/kabirshah" target="_blank">Kabir</a>
-</span></li>
-                </ul>
+</span>
               </div>
             </div>
           </div>
