--- a/index.html
+++ b/index.html
@@ -377,9 +377,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <footer>
           <div class="container">
             <div class="row">
-              <div class="col-md-6">                  <span class="loveC">
+              <div class="col-md-6">
+              	<ul class="legals><li><span class="loveC">
     Made with <i class="fa fa-heart pulse"></i> by <a href="http://about.me/kabirshah" target="_blank">Kabir</a>
-</span>
+</span></li></ul>
               </div>
             </div>
           </div>
