--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-              	<ul class="legals><li><span class="loveC">
-    Made with <i class="fa fa-heart pulse"></i> by <a href="http://about.me/kabirshah" target="_blank">Kabir</a>
-</span></li></ul>
+              	<ul class="legals">
+              		<li><span class="loveC">Made with <i class="fa fa-heart pulse"></i> by <a href="http://about.me/kabirshah" target="_blank">Kabir</a></span></li>
+              	</ul>
               </div>
             </div>
           </div>
