--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
        
         <div class="ignite-cta text-center">
           <div class="container">
-            <div class="row">
+            <div class="row text-center">
               <div class="col-md-12">
                 <a href="#" class="ignite-btn">Back To Top</a>
               </div>
