--- a/index.html
+++ b/index.html
@@ -145,15 +145,21 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               
             </div>
           </nav>-->
-          	<nav>
-		<ul class="cd-primary-nav">
-			<li><a href="#intro">About</a></li>
-			<li><a href="#features">Sites</a></li>
-			<li><a href="https://180projectblog.wordpress.com/">Blog</a></li>
-			<p style = 'vertical-align:middle;'>Click the X after you have selected a place to go</p>
-		</ul>
-	</nav>
+<div class="button_container" id="toggle">
+  <span class="top"></span>
+  <span class="middle"></span>
+  <span class="bottom"></span>
+</div>
 
+<div class="overlay" id="overlay">
+  <nav class="overlay-menu">
+    <ul>
+	<li><a href="#intro">About</a></li>
+	<li><a href="#features">Sites</a></li>
+	<li><a href="https://180projectblog.wordpress.com/">Blog</a></li>
+    </ul>
+  </nav>
+</div>
           <main>
           <section class="hero" id="hero">
             <div class="container">
