--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <div class="overlay" id="overlay">
   <nav class="overlay-menu">
     <ul>
-	<li><a href="#intro">About</a></li>
-	<li><a href="#features">Sites</a></li>
-	<li><a href="https://180projectblog.wordpress.com/">Blog</a></li>
+	<li><a href="#intro" class="n-link">About</a></li>
+	<li><a href="#features" class="n-link">Sites</a></li>
+	<li><a href="https://180projectblog.wordpress.com/" class="n-link">Blog</a></li>
     </ul>
   </nav>
 </div>
