--- a/public/textshadow.html
+++ b/public/textshadow.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Day Ninety Five | Click Location">
+    <meta name="description" content="Day Ninety Eight | Text Shadow">
     <meta name="author" content="Kabir Shah">
 
 		<title>Text Shadow</title>
