--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/textshadow.html">Latest Website</a>
+                      <a href="/public/superbowl50.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -299,6 +299,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                               <a href="public/synthesizer2.html" target="_blank">Day Ninety Six - Synthesizer 2.0<br></a>
                                               <a href="public/quoteipsum.html" target="_blank">Day Ninety Seven - Quote Ipsum<br></a>
                                               <a href="public/textshadow.html" target="_blank">Day Ninety Eight - Text Shadow<br></a>
+                                              <a href="public/superbowl.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
 								</div>
               </div>
             </div>
@@ -308,7 +309,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>98</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>99</em> are done</span></h1>
               </div>
             </div>
           </div>
