--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                               <a href="public/synthesizer2.html" target="_blank">Day Ninety Six - Synthesizer 2.0<br></a>
                                               <a href="public/quoteipsum.html" target="_blank">Day Ninety Seven - Quote Ipsum<br></a>
                                               <a href="public/textshadow.html" target="_blank">Day Ninety Eight - Text Shadow<br></a>
-                                              <a href="public/superbowl.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
+                                              <a href="public/superbowl50.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
 								</div>
               </div>
             </div>
