--- a/public/superbowl50.html
+++ b/public/superbowl50.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Day Ninety Nine | Superbowl 50">
     <meta name="author" content="Kabir Shah">
 
-		<title>Space Crystals</title>
+		<title>Superbowl 50</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/superbowl50.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 		<script src="/public/js/analytics.js"></script>
