Change all links to the new 180io.com Links

--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               <div class="col-md-8 col-md-offset-2 wp1">
 								<div id="sites">
 								                      <a  href="/public/about.html" target="_blank">Day One - About<br></a>
-                           <a href="/public/randomcolor.html" target="_blank">Day Two - Random Color<br></a>
-                            <a href="/public/whatstheday.html" target="_blank">Day Three - What's The Day?<br></a>
-                            <a href="/public/dice.html" target="_blank">Day Four - Dice<br></a>
-                            <a href="/public/loremipsum.html" target="_blank">Day Five - Lorem Ipsum<br></a>
-                        <a href="/public/newyear.html" target="_blank">Day Six - New Year Countdown<br></a>
-                            <a href="/public/clickchallenge.html" target="_blank">Day Seven - Click Challenge<br></a>
-                            <a href="/public/confetti.html" target="_blank">Day Eight - Confetti<br></a>
+                           <a href="http://180io.com/public/randomcolor.html" target="_blank">Day Two - Random Color<br></a>
+                            <a href="http://180io.com/public/whatstheday.html" target="_blank">Day Three - What's The Day?<br></a>
+                            <a href="http://180io.com/public/dice.html" target="_blank">Day Four - Dice<br></a>
+                            <a href="http://180io.com/public/loremipsum.html" target="_blank">Day Five - Lorem Ipsum<br></a>
+                        <a href="http://180io.com/public/newyear.html" target="_blank">Day Six - New Year Countdown<br></a>
+                            <a href="http://180io.com/public/clickchallenge.html" target="_blank">Day Seven - Click Challenge<br></a>
+                            <a href="http://180io.com/public/confetti.html" target="_blank">Day Eight - Confetti<br></a>
                             <a href="http://bit.do/daynineproject" target="_blank">Day Nine - Fortune Teller<br></a>
                             <a href="http://bit.do/daytenproject" target="_blank">Day Ten - Buttons!<br></a>
                              <a href="http://bit.do/dayelevenproject" target="_blank">Day Eleven - Vocab Enhancer<br></a>
@@ -268,38 +268,38 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                          <a href="http://bit.do/daysixtyfive" target="_blank">Day Sixty Five - SVG Coffee<br></a>
                                          <a href="http://bit.do/daysixtysix" target="_blank">Day Sixty Six - SVG Lightbulb<br></a>
                                           <a href="http://bit.do/daysixtyseven" target="_blank">Day Sixty Seven - Random Joke<br></a>
-                                          <a href="public/color.html" target="_blank">Day Sixty Eight - Color<br></a>
-                                          <a href="public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0<br></a>
-                                          <a href="public/stopwatch.html" target="_blank">Day Seventy - Stopwatch<br></a>
-                                          <a href="public/fixit.html" target="_blank">Day Seventy One - Fix It<br></a>
-                                           <a href="public/static.html" target="_blank">Day Seventy Two - Static<br></a>
-                                           <a href="public/lottery.html" target="_blank">Day Seventy Three - Lottery<br></a>
-                                           <a href="public/mirror.html" target="_blank">Day Seventy Four - Mirror<br></a>
-                                           <a href="public/wateradventure.html" target="_blank">Day Seventy Five - Water Adventure<br></a>
-                                           <a href="public/schedule.html" target="_blank">Day Seventy Six - Schedule<br></a>
-                                           <a href="public/lockpicker.html" target="_blank">Day Seventy Seven - Lock Picker<br></a>
-                                           <a href="public/leaveanote.html" target="_blank">Day Seventy Eight - Leave A Note<br></a>
-                                           <a href="public/wheelofhistory.html" target="_blank">Day Seventy Nine - Wheel Of History<br></a>
-                                           <a href="public/favoritecolor.html" target="_blank">Day Eighty - Favorite Color<br></a>
-                                           <a href="public/capitalize.html" target="_blank">Day Eighty One - Capitalize Text<br></a>
-                                           <a href="public/konami.html" target="_blank">Day Eighty Two - Konami Code<br></a>
-                                           <a href="public/checkboxwave.html" target="_blank">Day Eighty Three - Checkbox Wave<br></a>
-                                            <a href="public/fireworks2.html" target="_blank">Day Eighty Four - Fireworks 2.0<br></a>
-                                            <a href="public/particleexplosion.html" target="_blank">Day Eighty Five - Particle Explosion<br></a>
-                                            <a href="public/smokemachine.html" target="_blank">Day Eighty Six - Smoke Machine<br></a>
-                                            <a href="public/gradientmaker.html" target="_blank">Day Eighty Seven - Gradient Maker<br></a>
-                                            <a href="public/favoritecolor2.html" target="_blank">Day Eighty Eight - Favorite Color 2.0<br></a>
-                                            <a href="public/crystal.html" target="_blank">Day Eighty Nine - Crystal<br></a>
-                                            <a href="public/spacecrystals.html" target="_blank">Day Ninety - Space Crystals<br></a>
-                                            <a href="public/gradientmaker2.html" target="_blank">Day Ninety One - Gradient Maker 2.0<br></a>
-                                            <a href="public/rickroll.html" target="_blank">Day Ninety Two - Rickrolled<br></a>
-                                            <a href="public/clock.html" target="_blank">Day Ninety Three - Clock<br></a>
-                                            <a href="public/illusion.html" target="_blank">Day Ninety Four - Illusion<br></a>
-                                            <a href="public/clicklocation.html" target="_blank">Day Ninety Five - Click Location<br></a>
-                                              <a href="public/synthesizer2.html" target="_blank">Day Ninety Six - Synthesizer 2.0<br></a>
-                                              <a href="public/quoteipsum.html" target="_blank">Day Ninety Seven - Quote Ipsum<br></a>
-                                              <a href="public/textshadow.html" target="_blank">Day Ninety Eight - Text Shadow<br></a>
-                                              <a href="public/superbowl50.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
+                                          <a href="http://180io.com/public/color.html" target="_blank">Day Sixty Eight - Color<br></a>
+                                          <a href="http://180io.com/public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0<br></a>
+                                          <a href="http://180io.com/public/stopwatch.html" target="_blank">Day Seventy - Stopwatch<br></a>
+                                          <a href="http://180io.com/public/fixit.html" target="_blank">Day Seventy One - Fix It<br></a>
+                                           <a href="http://180io.com/public/static.html" target="_blank">Day Seventy Two - Static<br></a>
+                                           <a href="http://180io.com/public/lottery.html" target="_blank">Day Seventy Three - Lottery<br></a>
+                                           <a href="http://180io.com/public/mirror.html" target="_blank">Day Seventy Four - Mirror<br></a>
+                                           <a href="http://180io.com/public/wateradventure.html" target="_blank">Day Seventy Five - Water Adventure<br></a>
+                                           <a href="http://180io.com/public/schedule.html" target="_blank">Day Seventy Six - Schedule<br></a>
+                                           <a href="http://180io.com/public/lockpicker.html" target="_blank">Day Seventy Seven - Lock Picker<br></a>
+                                           <a href="http://180io.com/public/leaveanote.html" target="_blank">Day Seventy Eight - Leave A Note<br></a>
+                                           <a href="http://180io.com/public/wheelofhistory.html" target="_blank">Day Seventy Nine - Wheel Of History<br></a>
+                                           <a href="http://180io.com/public/favoritecolor.html" target="_blank">Day Eighty - Favorite Color<br></a>
+                                           <a href="http://180io.com/public/capitalize.html" target="_blank">Day Eighty One - Capitalize Text<br></a>
+                                           <a href="http://180io.com/public/konami.html" target="_blank">Day Eighty Two - Konami Code<br></a>
+                                           <a href="http://180io.com/public/checkboxwave.html" target="_blank">Day Eighty Three - Checkbox Wave<br></a>
+                                            <a href="http://180io.com/public/fireworks2.html" target="_blank">Day Eighty Four - Fireworks 2.0<br></a>
+                                            <a href="http://180io.com/public/particleexplosion.html" target="_blank">Day Eighty Five - Particle Explosion<br></a>
+                                            <a href="http://180io.com/public/smokemachine.html" target="_blank">Day Eighty Six - Smoke Machine<br></a>
+                                            <a href="http://180io.com/public/gradientmaker.html" target="_blank">Day Eighty Seven - Gradient Maker<br></a>
+                                            <a href="http://180io.com/public/favoritecolor2.html" target="_blank">Day Eighty Eight - Favorite Color 2.0<br></a>
+                                            <a href="http://180io.com/public/crystal.html" target="_blank">Day Eighty Nine - Crystal<br></a>
+                                            <a href="http://180io.com/public/spacecrystals.html" target="_blank">Day Ninety - Space Crystals<br></a>
+                                            <a href="http://180io.com/public/gradientmaker2.html" target="_blank">Day Ninety One - Gradient Maker 2.0<br></a>
+                                            <a href="http://180io.com/public/rickroll.html" target="_blank">Day Ninety Two - Rickrolled<br></a>
+                                            <a href="http://180io.com/public/clock.html" target="_blank">Day Ninety Three - Clock<br></a>
+                                            <a href="http://180io.com/public/illusion.html" target="_blank">Day Ninety Four - Illusion<br></a>
+                                            <a href="http://180io.com/public/clicklocation.html" target="_blank">Day Ninety Five - Click Location<br></a>
+                                              <a href="http://180io.com/public/synthesizer2.html" target="_blank">Day Ninety Six - Synthesizer 2.0<br></a>
+                                              <a href="http://180io.com/public/quoteipsum.html" target="_blank">Day Ninety Seven - Quote Ipsum<br></a>
+                                              <a href="http://180io.com/public/textshadow.html" target="_blank">Day Ninety Eight - Text Shadow<br></a>
+                                              <a href="http://180io.com/public/superbowl50.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
 								</div>
               </div>
             </div>
