--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/rain.html">Latest Website</a>
+                      <a href="http://180io.com/public/ripple.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -301,6 +301,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                               <a href="http://180io.com/public/textshadow.html" target="_blank">Day Ninety Eight - Text Shadow<br></a>
                                               <a href="http://180io.com/public/superbowl50.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
                                                <a href="http://180io.com/public/rain.html" target="_blank">Day One Hundred - Rain<br></a>
+                                               <a href="http://180io.com/public/ripple.html" target="_blank">Day One Hundred One - Ripple<br></a>
 								</div>
               </div>
             </div>
@@ -310,7 +311,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>100</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>101</em> are done</span></h1>
               </div>
             </div>
           </div>
