--- a/public/toy.html
+++ b/public/toy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Day One Hundred Two | Toy">
     <meta name="author" content="Kabir Shah">
 
-		<title>Ripple</title>
+		<title>Toy</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/toy.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
